@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,22 +23,22 @@
 
 /*
  * @test
+ * @enablePreview
  * @library ../
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
  * @run testng/othervm --enable-native-access=ALL-UNNAMED TestMixedMallocFree
  */
 
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.SymbolLookup;
+import java.lang.foreign.Linker;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 import org.testng.annotations.Test;
 
 import java.lang.invoke.MethodHandle;
 
-import static jdk.incubator.foreign.ValueLayout.JAVA_INT;
+import static java.lang.foreign.ValueLayout.JAVA_INT;
 import static org.testng.Assert.assertEquals;
 
 public class TestMixedMallocFree extends NativeTestHelper {
@@ -47,17 +47,15 @@ public class TestMixedMallocFree extends NativeTestHelper {
 
     static {
         System.loadLibrary("Malloc");
-        SymbolLookup MALLOC = SymbolLookup.loaderLookup();
-
-        MH_my_malloc = CLinker.systemCLinker().downcallHandle(
-            MALLOC.lookup("my_malloc").orElseThrow(),
+        MH_my_malloc = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("my_malloc"),
                 FunctionDescriptor.of(C_POINTER, C_LONG_LONG));
     }
 
     @Test
     public void testMalloc() throws Throwable {
         MemoryAddress ma = (MemoryAddress) MH_my_malloc.invokeExact(4L);
-        MemorySegment seg = MemorySegment.ofAddress(ma, 4L, ResourceScope.newImplicitScope());
+        MemorySegment seg = MemorySegment.ofAddress(ma, 4L, MemorySession.openImplicit());
         seg.set(JAVA_INT, 0, 42);
         assertEquals(seg.get(JAVA_INT, 0), 42);
         // Test if this free crashes the VM, which might be the case if we load the wrong default library
